[gd_scene load_steps=4 format=3 uid="uid://d380qw6no8rhn"]

[ext_resource type="PackedScene" uid="uid://duguqkmmg4tol" path="res://addons/property_panel/property_panel.tscn" id="1"]
[ext_resource type="Script" path="res://main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c1cfc862rsgev" path="res://icon.svg" id="3_5w8pe"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="TopPropertyPanel" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
offset_bottom = 34.0
grow_horizontal = 2
vertical = false

[node name="MiddlePropertyPanel" parent="." instance=ExtResource("1")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -248.0
offset_right = 179.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2

[node name="EditableTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -23.0
offset_right = 64.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60, 60)
texture = ExtResource("3_5w8pe")

[connection signal="property_changed" from="MiddlePropertyPanel" to="." method="_on_MiddlePropertyPanel_property_changed"]
